# travai

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 375e74056e1d_global_schema_with_trot_and_gallop_.py  7535c47565d2_add_feature_tables.py  853441074c95_extend_victory_margin_to_text_and_add_.py
docs/: DEPLOY.md
models/latest/: meta.json  model.lgb
scripts/: backfill.py  build_features.py  compare_models.py  dump-db.sh  evaluate.py  explore.py  import-dump.sh  ingest_day.py  patch_pedigree_time_aware.py  run-backfill.sh  seed_reference_data.py  server-setup.sh  train.py
src/travai/: __init__.py  config.py  logging_setup.py
src/travai/atg/: __init__.py  client.py  models.py
src/travai/db/: __init__.py  base.py  session.py
src/travai/db/models/: __init__.py  competitions.py  features.py  identity.py  reference.py
src/travai/features/: __init__.py  builder.py  pedigree.py
src/travai/model/: __init__.py  dataset.py  evaluation.py  lgbm.py
src/travai/sources/: __init__.py  base.py
src/travai/sources/atg/: __init__.py  adapter.py  client.py  models.py
tests/: test_atg_adapter.py  test_config.py  test_features.py  test_model.py  test_models.py  test_pedigree.py
tests/fixtures/: atg_v75_minimal.json
